; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_typecmds.c_findTypeOutputFunction.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_typecmds.c_findTypeOutputFunction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPAQUEOID = common dso_local global i32 0, align 4
@WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [58 x i8] c"changing argument type of function %s from \22opaque\22 to %s\00", align 1
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_UNDEFINED_FUNCTION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"function %s does not exist\00", align 1
@NIL = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @findTypeOutputFunction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @findTypeOutputFunction(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [1 x i32], align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  store i32 %8, i32* %9, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %12 = call i32 @LookupFuncName(i32* %10, i32 1, i32* %11, i32 1)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i64 @OidIsValid(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %3, align 4
  br label %53

18:                                               ; preds = %2
  %19 = load i32, i32* @OPAQUEOID, align 4
  %20 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  store i32 %19, i32* %20, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %23 = call i32 @LookupFuncName(i32* %21, i32 1, i32* %22, i32 1)
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i64 @OidIsValid(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %40

27:                                               ; preds = %18
  %28 = load i32, i32* @WARNING, align 4
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @NameListToString(i32* %29)
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @format_type_be(i32 %31)
  %33 = call i32 (i8*, i32, ...) @errmsg(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i32 %30, i32 %32)
  %34 = call i32 @ereport(i32 %28, i32 %33)
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @SetFunctionArgType(i32 %35, i32 0, i32 %36)
  %38 = call i32 (...) @CommandCounterIncrement()
  %39 = load i32, i32* %7, align 4
  store i32 %39, i32* %3, align 4
  br label %53

40:                                               ; preds = %18
  %41 = load i32, i32* %5, align 4
  %42 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  store i32 %41, i32* %42, align 4
  %43 = load i32, i32* @ERROR, align 4
  %44 = load i32, i32* @ERRCODE_UNDEFINED_FUNCTION, align 4
  %45 = call i32 @errcode(i32 %44)
  %46 = load i32*, i32** %4, align 8
  %47 = load i32, i32* @NIL, align 4
  %48 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %49 = call i32 @func_signature_string(i32* %46, i32 1, i32 %47, i32* %48)
  %50 = call i32 (i8*, i32, ...) @errmsg(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %49)
  %51 = call i32 @ereport(i32 %43, i32 %50)
  %52 = load i32, i32* @InvalidOid, align 4
  store i32 %52, i32* %3, align 4
  br label %53

53:                                               ; preds = %40, %27, %16
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i32 @LookupFuncName(i32*, i32, i32*, i32) #1

declare dso_local i64 @OidIsValid(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i32, ...) #1

declare dso_local i32 @NameListToString(i32*) #1

declare dso_local i32 @format_type_be(i32) #1

declare dso_local i32 @SetFunctionArgType(i32, i32, i32) #1

declare dso_local i32 @CommandCounterIncrement(...) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @func_signature_string(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
